syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";


message AvatarSkillInfo {
	uint32 pass_cd_time = 1;
	repeated uint32 full_cd_time_list = 2;
	uint32 max_charge_count = 3;
}
