syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";

// CmdId: 8315
// EnetChannelId: 0
// EnetIsReliable: true
message ChannellerSlabWearBuffRsp {
	int32 retcode = 8;
	uint32 buff_id = 1;
	uint32 slot_id = 11;
	bool is_mp = 14;
}
