syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";

// CmdId: 1082
// EnetChannelId: 0
// EnetIsReliable: true
message ProudSkillUpgradeRsp {
	int32 retcode = 10;
	uint64 avatar_guid = 13;
	uint32 proud_skill_id = 2;
}
