syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";

import "Reliquary.proto";
import "Weapon.proto";

message ShowEquip {
	uint32 item_id = 1;
	oneof detail {
		Reliquary reliquary = 2;
		Weapon weapon = 3;
	}
}
